--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -4,7 +4,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #ddd;
 }
 
 .Navbar a {
@@ -29,7 +28,7 @@
 .Navbar .searchbox {
   height: 40px;
   width: 70%;
-  background-color: white;
+  background-color: #fff;
   border-radius: 14px;
   display: flex;
   flex-direction: row;
