--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -28,6 +28,7 @@
 .Navbar .searchbox {
   height: 40px;
   width: 70%;
+  padding: 0 5px;
   background-color: #fff;
   border-radius: 14px;
   display: flex;
@@ -46,8 +47,7 @@
 
 .Navbar input {
   width: 94%;
-  height: 100%;
-  padding: 4px 20px;
+  padding: 4px 10px;
   margin: 0 0;
   border: none;
   font-size: 1.1rem;
