--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -3,12 +3,15 @@
   font-size: 1.3rem;
   display: flex;
   justify-content: space-between;
+  background-color: #e8505b;
   align-items: center;
 }
 
 .Navbar a {
   text-decoration: none;
-  color: #555;
+  color: #fff;
+  font-weight: bold;
+  font-size: 1.5rem;
 }
 
 .Navbar img {
@@ -27,9 +30,9 @@
 
 .Navbar .searchbox {
   height: 40px;
-  width: 70%;
+  width: 60%;
   padding: 0 5px;
-  background-color: #fff;
+  background-color: rgb(250, 250, 250);
   border-radius: 14px;
   display: flex;
   flex-direction: row;
@@ -51,7 +54,7 @@
   margin: 0 0;
   border: none;
   font-size: 1.1rem;
-  color: #555;
+  color: #222;
 }
 
 .Navbar input:focus {
