--- a/src/components/NewsSection/CountryList/CountryIcon/CountryIcon.module.css
+++ b/src/components/NewsSection/CountryList/CountryIcon/CountryIcon.module.css
@@ -4,11 +4,10 @@
   height: 105px;
   margin: 0 10px;
   padding: 0;
-  background-color: #ddd;
   color: #555;
 }
 .CountryIcon:hover {
-  background-color: #ccc;
+  background-color: #eee;
   cursor: pointer;
 }
 
