--- a/src/components/CurrencySection/CurrencySection.module.css
+++ b/src/components/CurrencySection/CurrencySection.module.css
@@ -5,14 +5,14 @@
 .CurrencySection select {
   font-size: 1.2rem;
   border: none;
-  background-color: #e8505b;
-  color: #fff;
+  background-color: #f9d56e;
+  color: #222;
   padding: 4px;
   margin-right: 30px;
 }
 
 .CurrencySection select:hover {
-  background-color: #c23841;
+  background-color: rgb(241, 202, 95);
 }
 
 .CurrencySection select:focus {
