--- a/src/components/NewsSection/CountryList/CountryList.module.css
+++ b/src/components/NewsSection/CountryList/CountryList.module.css
@@ -14,3 +14,18 @@
   padding: 0;
   margin: 0;
 }
+
+.CountryList::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+  background-color: #f5f5f5;
+}
+
+.CountryList::-webkit-scrollbar {
+  width: 12px;
+  background-color: #f5f5f5;
+}
+
+.CountryList::-webkit-scrollbar-thumb {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+  background-color: #e8505b;
+}
