--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,8 +1,8 @@
 .Navbar {
-  padding: 10px 20px;
+  padding: 15px 20px;
   font-size: 1.3rem;
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   background-color: #e8505b;
   align-items: center;
 }
@@ -12,6 +12,7 @@
   color: #fff;
   font-weight: bold;
   font-size: 1.5rem;
+  margin-right: 80px;
 }
 
 .Navbar img {
@@ -30,7 +31,7 @@
 
 .Navbar .searchbox {
   height: 40px;
-  width: 60%;
+  width: 75%;
   padding: 0 5px;
   background-color: rgb(250, 250, 250);
   border-radius: 14px;
